chore: fix Java 25 deprecations and replace Guava with stdlib
Three bundled migrations to clear Java 25 deprecation warnings and reduce third-party surface area:

(1) Java 25 deprecations: Replace 6 occurrences of Thread.currentThread().getId() with Thread.currentThread().threadId() in ExtentNode.java. The threadId() variant returns the same long but is the non-deprecated path introduced in Java 19. Replace deprecated 1-arg new Locale("id_ID") constructor with Locale.of("id", "ID") in E2EMobileTest.java. Note this is a deprecation cleanup paired with a locale correctness fix — the prior 1-arg form parsed "id_ID" as the language string verbatim, producing Locale[id_id]. The new form produces the correct Locale[id_ID], so Faker locale resolution will now properly hit Indonesian resources where it previously fell back. Output values may differ from prior test runs.

(2) Guava removal from production code: Replace 3 Iterables.get(List, int) call sites in ProductsList.java with direct List.get(int). Both throw IndexOutOfBoundsException on out-of-bounds; semantics match exactly for List-typed input. Drop the 3 redundant (WebElement) casts now made unnecessary since List<WebElement>.get(int) returns WebElement directly. Remove the com.google.common.collect.Iterables import. No pom.xml change for Guava — it remains transitively present via selenium-remote-driver and is no longer referenced from production code.

(3) JavaFaker → Datafaker migration: Swap import com.github.javafaker.Faker for import net.datafaker.Faker in E2EMobileTest.java. The Faker(Locale) constructor signature is identical, no API surface changes required. Remove the @SuppressWarnings("deprecation") annotation that was suppressing the now-fixed Locale deprecation. Remove the JavaFaker dependency block and javafaker.version property from pom.xml; this completes the JavaFaker removal deferred from Commit 2.1. Datafaker 2.4.2 was already declared as a direct dependency since Commit 2.1.

Both compile gates (